--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- test --> 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -109,7 +109,7 @@
 	</div>
 </div>
 
-	<!-- Bibliotheken -->
+	<!-- Bibliotheken  -->
     <script src="js/responsivegridsystem.js"></script>
 	<script src="js/selectivizr-min.js"></script>
 	<script src="js/jquery-1.7.2.min.js"></script>
